add background image to header

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ body {
   font-family: Helvetica;
 }
 
+header {
+  background-image: url("../images/pattern.webp");
+}
+
 h1 {
   font-size: 100px;
   font-weight: bold;
